clusters/cosmos/apps/homer/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: homer-ingress
spec:
 tls:
 - hosts:
   - homer.cosmos.cboxlab.com
   secretName: homer-tls-secret
 rules:
 - host: homer.cosmos.cboxlab.com
   http:
     paths:
     - backend:
         service:
           name: homer
           port:
             number: http
       path: /
       pathType: Prefix
